<resources>
    <string name="app_name">Group20InClass04</string>
    <string name="Name">Name</string>
    <string name="Dept">Dept</string>
    <string name="Age">Age</string>
    <string name="ZIP">ZIP</string>
    <string name="Password">Password</string>
    <string name="ThreadButton">Generate Using Thread</string>
    <string name="AsyncButton">Generate Using AsyncTask</string>
    <string name="Clear">Clear</string>
    <string name="Close">Close</string>
</resources>
